[package]
edition = "2021"
name = "lora2traffic"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lib]
name = "lora2traffic"
path = "src/lib.rs"

[[bin]]
name = "lora2traffic-send"
path = "src/bin/lora2traffic-send.rs"
[[bin]]
name = "lora2traffic-rcv"
path = "src/bin/lora2traffic-rcv.rs"

[dependencies]
# Change stm32wle5jc to your chip name, if necessary. Also update .cargo/config.toml
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32wle5jc",
    "time-driver-any",
    "memory-x",
    "unstable-pac",
    "exti",
    "chrono",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-futures = { version = "0", features = ["defmt"] }

lora-phy = { git = "https://github.com/lora-rs/lora-rs", features = [
    "defmt-03",
] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = 2
